--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<jackson.dataformat.xml.version>2.12.4</jackson.dataformat.xml.version>
 		<awaitility.version>3.0.0</awaitility.version>
 		<guava.version>32.0.0-jre</guava.version>
+		<okhttp.version>4.10.0</okhttp.version>
 	</properties>
 
 	<dependencies>
@@ -29,7 +30,7 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+		<!-- https://mvnrepositoary.com/artifact/io.rest-assured/rest-assured -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
@@ -91,6 +92,15 @@
 			<artifactId>awaitility</artifactId>
 			<version>${awaitility.version}</version>
 		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>${okhttp.version}</version>
+		</dependency>
+
 
 	</dependencies>
 
