--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,14 @@
 			<artifactId>awaitility</artifactId>
 			<version>${awaitility.version}</version>
 		</dependency>
+		
+		
+		
+		<dependency>
+  			<groupId>com.fasterxml.jackson.datatype</groupId>
+  			<artifactId>jackson-datatype-jsr310</artifactId>
+  			<version>2.13.4</version>
+		</dependency>
 
 
 		<!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
