--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.abtesting.api</groupId>
-	<artifactId>simple-api</artifactId>
+	<artifactId>abt-api-testing-library</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<name>ABT-ApiTestingLibrary</name>
 
 
 	<properties>
