--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<awaitility.version>3.0.0</awaitility.version>
 		<guava.version>32.0.0-jre</guava.version>
 		<okhttp.version>4.10.0</okhttp.version>
+		<allure.rest-assured.version>2.17.0</allure.rest-assured.version>
 	</properties>
 
 	<dependencies>
@@ -36,6 +37,13 @@
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
 			<version>${rest.assured.version}</version>
+		</dependency>
+		
+		
+		<dependency>
+			<groupId>io.qameta.allure</groupId>
+			<artifactId>allure-rest-assured</artifactId>
+			<version>${allure.rest-assured.version}</version>
 		</dependency>
 
 
